# piano-transformer

./: PLUGINS.md
.github/workflows/: build-4stem.yml
4-stem-app/: entitlements.mac.plist  main.js  package-lock.json  package.json  preload.js
4-stem-app/assets/: icon.icns
4-stem-app/python/: separate.py  server.py  sidecar.py  sidecar.spec
4-stem-app/scripts/: notarize.js  setup-signing.sh
4-stem-app/src/: index.html
4-stem-app/src/css/: styles.css
4-stem-app/src/js/: app.js
piano-transformer-app/: .gitignore  main.js  package.json  preload.js
piano-transformer-app/python/: README.md  generate.py  midi_utils.py  requirements.txt  server.py  sidecar.py  test_generate.py
piano-transformer-app/scripts/: download-model.sh
piano-transformer-app/src/: index.html
piano-transformer-app/src/css/: styles.css
piano-transformer-app/src/js/: app.js
plugins/ChordGPT/: .continue-here.md  CMakeLists.txt
plugins/ChordGPT/.ideas/: architecture.md  parameter-spec.md  plan.md
plugins/ChordGPT/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ChordGPT/Source/ui/public/: index.html
plugins/ChordGPT/Source/ui/public/css/: styles.css
plugins/ChordGPT/Source/ui/public/js/juce/: check_native_interop.js  index.js
plugins/JazzGptMidi/: .stage2-report.json  .stage3-report.json  CMakeLists.txt  NOTES.md
plugins/JazzGptMidi/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/JazzGptMidi/.ideas/mockups/: v1-ma-aesthetic.html  v2-compact.html  v3-with-playback.html  v4-dual-mode.html  v5-with-audio.html  v6-rhodes.html  v7-warm-rhodes.html
plugins/JazzGptMidi/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/JazzGptMidi/Source/ui/public/: index.html
plugins/JazzGptMidi/Source/ui/public/css/: styles.css
plugins/JazzGptMidi/Source/ui/public/js/: app.js
plugins/PianoTransformer/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml
